# teknofest-2026-ika-parkur

./: .gitattributes  CMakeLists.txt  README.md  package.xml
generator/: centerline.py  config.yaml  generate.py  sdfkit.py  signage.py
launch/: parkur.launch.py
models/: README.md
models/ika_isaretler/: model.config
models/ika_isaretler/meshes/: dur_cikis.mtl  dur_inis.mtl  hedef.mtl  stage_01.mtl  stage_02.mtl  stage_03.mtl  stage_04.mtl  stage_05.mtl  stage_06.mtl  stage_07.mtl  stage_08.mtl  stage_09.mtl  stage_10.mtl  stage_11.mtl  stage_11_bitis.mtl
nodes/: kayar_engel_driver.py
tools/: preview_track.py  preview_water.py  sync_and_build.sh  verify.py
worlds/: ika_parkur.sdf  ika_parkur_stages.yaml
